--- a/membuat-cv-dengan-bootstrap.html
+++ b/membuat-cv-dengan-bootstrap.html
@@ -155,6 +155,12 @@
         </div>
     </main>
 
+    <footer class="container-fluid text-center mt-sm-5 bg-success">
+        <p>Penulis: Sulistio Pratomo<br>
+            <a class="text-dark" href="mailto:thematic.academy.tio@gmail.com">thematic.academy.tio@gmail.com</a>
+        </p>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
